force-app/main/default/objects/JqueryDatePicker__c/JqueryDatePicker__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>JqueryDatePicker</label>
</CustomObject>