force-app/main/default/objects/JqueryDatePicker__c/fields/NoOfMonths__c.field-meta.xml
<CustomField>
    <fullName>NoOfMonths__c</fullName>
    <label>NoOfMonths</label>
    <length>10</length>
    <type>Text</type>
</CustomField>