force-app/main/default/objects/JqueryDatePicker__c/fields/StartDateFrom__c.field-meta.xml
<CustomField>
    <fullName>StartDateFrom__c</fullName>
    <label>StartDateFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>