force-app/main/default/objects/JqueryDatePicker__c/fields/StartDateTo__c.field-meta.xml
<CustomField>
    <fullName>StartDateTo__c</fullName>
    <label>StartDateTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>